## START
v2404
 - more date matcher fixes
 - don't discard non-DOI results / use archived directly by prefixing with "S2:"
 - bulk PMID lookup

v2403
 - fix expression search date matching
 - fix expression search type matching
 - better handling of 492

v2402
 - HTTP 429 effectively means "use API key"
 - use bulk API for paper refs too
 - better list sync after manipulate filtered
 - query type 1: more filters: pubdate, articletype

v2401
 - filter button/dialog in paper lists
 - in paper list, put query name in header
 - export text for annotation
 - filtered2: reject all button

v2331
- no need for outer parenthesis in logical expressions
- doc: logical expr
- fix: duplicate DOIs in acc./rej. files

v2330
 - in annotate: delete paper
 - Wikidata as PMID2DOI bkp server
 - doc: PMIDs

v2329
 - input PMIDs
 - doc: query types
 - FIX: NPE in PaperList.readFromFile()
 - fix: query list not refreshed after new query
 - fix: after new query center list on it

v2328
 - implement query type 2
 - remove unused features from type 1 query cards
 - try to handle SSLException
 - fix: query type 1 stopped at 2000
 - fix: query type 1 shows no progress indicator

v2327
 - bulk access via S2API keys
 - new query type: bulk expression search (requires S2API key)
 - automatic bulk data download if S2API key present
 - trash button in query card
 - fix: query (name) already exists (new query dialog)
 - fix: no DOIS on create: Accepted: 1
 - fix: new query dialog checkvalue

v2326.1
 - hotfix: HTTP 504 from S2

v2326
 - hotfix: new query dialog regression

v2325
 - DOI: simply remove all before "10."
 - warning if no DOI returns any ref
 - "Accept all" button on filter2 screen

v2324
 - help tooltips in all settings dialogs
 - set bold accepted according to max-cache-days
 - fix: tooltips removed centered layout
 - fix: only first doi link insertable
 - fix: focus in annotation screen
 - fix: accepted was not touched when 0 new in filter1,2
 - doc: can I edit keywords?

v2323