@@ -140,7 +140,7 @@ dependencies {
 buildConfig {
     packageName("org.reactome.lit_ball")  // forces the package. Defaults to '${project.group}'
     buildConfigField("String", "APP_NAME", "\"LitBall\"")
-    buildConfigField("String", "APP_VERSION", provider { "\"2404\"" })
+    buildConfigField("String", "APP_VERSION", provider { "\"2405\"" })
 }
 
 configurations.all {
@@ -152,7 +152,7 @@ configurations.all {
 compose.desktop {
     application {
         mainClass = "MainKt"
-        version = "2404"
+        version = "2405"
         group = "org.reactome"
         nativeDistributions {
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
